add_subdirectory(misc)
add_subdirectory(inet)
add_subdirectory(p2p)
add_subdirectory(repository)
add_subdirectory(mcast)
add_subdirectory(node)

find_program (BASH_PROGRAM bash)
if (BASH_PROGRAM)
  add_test(NAME PubSub_test COMMAND ${BASH_PROGRAM} ${CMAKE_CURRENT_SOURCE_DIR}/PubSub_test.sh)
endif (BASH_PROGRAM)